@@ -106,10 +106,10 @@ SQL_QUERY;
 
       $rs = exec_query($sql, $query, array($item_id, $item_id, $ok_status));
       if ($rs -> RecordCount() == 0) {
-          $tpl -> assign(array('NORMAL_MAIL' => 'disabled', 'FORWARD_MAIL' => 'selected', 'MAIL_LIST' => ''));
+          $tpl -> assign(array('FORWARD_MAIL' => 'checked', 'MAIL_LIST' => '', 'DEFAULT' => 'forward'));
       } else {
 
-          $tpl -> assign(array('NORMAL_MAIL' => 'checked', 'FORWARD_MAIL' => ''));
+          $tpl -> assign(array('NORMAL_MAIL' => 'checked', 'FORWARD_MAIL' => '', 'DEFAULT' => 'normal'));
 
           while (!$rs -> EOF) {
             $show_mail_acc = decode_idna($rs -> fields['mail_acc']);
@@ -148,10 +148,10 @@ SQL_QUERY;
       $rs = exec_query($sql, $query, array($ok_status, $item_id));
 
       if ($rs -> RecordCount() == 0) {
-          $tpl -> assign(array('NORMAL_MAIL' => 'disabled', 'FORWARD_MAIL' => 'selected', 'MAIL_LIST' => ''));
+          $tpl -> assign(array('FORWARD_MAIL' => 'checked', 'MAIL_LIST' => '', 'DEFAULT' => 'forward'));
       } else {
 
-          $tpl -> assign(array('NORMAL_MAIL' => 'checked', 'FORWARD_MAIL' => ''));
+          $tpl -> assign(array('NORMAL_MAIL' => 'checked', 'FORWARD_MAIL' => '', 'DEFAULT' => 'normal'));
 
           while (!$rs -> EOF) {
             $show_mail_acc = decode_idna($rs -> fields['mail_acc']);
@@ -197,10 +197,10 @@ SQL_QUERY;
       $rs = exec_query($sql, $query, array($ok_status, $item_id));
 
       if ($rs -> RecordCount() == 0) {
-          $tpl -> assign(array('NORMAL_MAIL' => 'disabled', 'FORWARD_MAIL' => 'selected', 'MAIL_LIST' => ''));
+          $tpl -> assign(array('FORWARD_MAIL' => 'checked', 'MAIL_LIST' => '', 'DEFAULT' => 'forward'));
       } else {
 
-          $tpl -> assign(array('NORMAL_MAIL' => 'checked', 'FORWARD_MAIL' => ''));
+          $tpl -> assign(array('NORMAL_MAIL' => 'checked', 'FORWARD_MAIL' => '', 'DEFAULT' => 'normal'));
 
           while (!$rs -> EOF) {
             $show_mail_acc = decode_idna($rs -> fields['mail_acc']);
